# readiness-as-code

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/workflows/: publish-ado-extension.yml  publish.yml  readiness.yml
.readiness/: checkpoint-definitions.json  config.json  external-evidence.json  review-baseline.json  scan-history.json
ado-extension/: .gitignore  README.md  package-lock.json  package.json  vss-extension.json
ado-extension/images/: logo.placeholder.txt
ado-extension/task/: index.ts  junit.ts  package-lock.json  package.json  task.json  tsconfig.json
ado-extension/widget/: configuration.html  configuration.js  configuration.ts  package-lock.json  package.json  tsconfig.json  widget.html  widget.js  widget.ts
ai-skills/: author-checkpoints.instructions.md  scan.instructions.md
docs/: architecture-and-tradeoffs.md  getting-started.md  verification-types.md
docs/presentation/: README.md  demo-script-3min.md  demo-script-6min.md  keynote-15min.md  talking-points.md
examples/security-baseline/: checkpoint-definitions.json
examples/telemetry/: checkpoint-definitions.json
examples/web-api/: checkpoint-definitions.json
mcp/: README.md
memory/: MEMORY.md  project_value_prop_framing.md
ready/: __main__.py  analytics.py  engine.py  mcp_server.py  ready.py  schema.py  validators.py  watch.py
ready/adapters/: __init__.py  ado.py  github_issues.py  jira.py
ready/examples/azure-engineering-review/: checkpoint-definitions.json
ready/examples/azure-governance/: checkpoint-definitions.json
ready/examples/azure-operational-review/: checkpoint-definitions.json
ready/examples/engineering-review/: checkpoint-definitions.json
ready/examples/operational-review/: checkpoint-definitions.json
ready/examples/service-migration/: checkpoint-definitions.json
ready/examples/starter-pack/: checkpoint-definitions.json
ready/examples/web-api/: README.md
ready/formatters/: __init__.py  dashboard.py  json_formatter.py  leaderboard.py  markdown.py  scorecard.py  terminal.py
ready/plugins/: __init__.py  base.py  external_plugin.py  file_count_plugin.py  file_exists_plugin.py  glob_plugin.py  grep_plugin.py  hybrid_plugin.py  json_path_plugin.py  registry.py  utils.py
schemas/: checkpoint-definitions.schema.json  exceptions.schema.json  external-evidence.schema.json
src/: mcp_server.py  ready.py  validators.py
src/adapters/: ado.py  github_issues.py  jira.py
templates/: azure-pipelines.yml  github-actions.yml  gitlab-ci.yml
tests/: test_validators.py
