[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readiness-as-code"
version = "0.1.0"
description = "Continuous review compliance — as a folder in your repo."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Jeremiah Walters"}
]
keywords = [
    "compliance",
    "code-review",
    "quality-gates",
    "operational-readiness",
    "devops",
    "ci-cd",
    "policy-as-code",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/jtwalters25/readiness-as-code"
Documentation = "https://github.com/jtwalters25/readiness-as-code/tree/main/docs"
Repository = "https://github.com/jtwalters25/readiness-as-code"
Issues = "https://github.com/jtwalters25/readiness-as-code/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]

[project.scripts]
ready = "src.ready:main"
ready-mcp = "src.mcp_server:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yml", "*.yaml", "*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py310"
line-length = 100
